# test

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  LICENSE  README.md  SIGNAL_GENERATOR_ERROR_ANALYSIS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_ict_comprehensive.py  test_ict_engine.py  비주류시장에 대한 시장.docx  ★대검찰청 도서관 법률정보 DB 외부이용 안내.hwp  웹사이트.txt
.cache/optimizations/: optimization_cache.json
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: task13_quick_start.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt  prompt.txt  test-stabilization-plan.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  tasks.json
DesignRoadmap/: 01PROJECT_SPECIFICATION.md  02summary_2025-08-29.md  03ROADMAP.md
application/execution/: AsyncRiskManager.py
application/orchestration/: AsyncStrategyCoordinator.py  AsyncTradingOrchestrator.py
claudedocs/: backtesting_test_report.md  code_quality_analysis_report.md  config_refactor_implementation.md  config_system_analysis.md  conversation-summary-task-12.7.md
config/: deploy.config.example  trading_config.yaml
docs/: CONFIG_MIGRATION_GUIDE.md  DEPLOYMENT.md  DOCKER_INSTALLATION.md  development.md  docker.md  strategy_framework_guide.md
domain/events/: OrderEvent.py  TradeDecisionEvent.py
infrastructure/binance/: AsyncOrderManager.py
scripts/: compare_environments.py  config_migration.py  deploy.sh  docker_build.sh  run_backtest.sh  run_local.sh  run_paper.sh  validate_config.py
src/ict_trading_bot.egg-info/: SOURCES.txt  requires.txt
src/trading_bot/: main.py  system_integrator.py
taskhistory/: 2408301430.md
tests/: test_basic_setup.py  test_cli_arguments.py  test_risk_management.py  test_system_integrator_registration.py
tests/backtesting/: __init__.py  conftest.py  test_backtest_engine.py  test_functional_workflow.py  test_integration.py  test_performance_analyzer.py
tests/config/: __init__.py  test_config_consolidation.py  test_config_manager.py  test_config_manager_env_vars.py  test_environment_inheritance.py  test_environment_mapping.py  test_log_manager.py  test_migration_tools.py  test_pydantic_validation.py  test_yaml_loader.py
tests/data/: test_binance_client.py  test_data_cache.py  test_market_data_provider.py  (+1 more)
(+117 files in other folders)
